--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.17.0
+  shared_preferences: ^2.2.3
   firebase_core: ^2.30.0
   firebase_auth: ^4.19.2
   firebase_auth_web: ^5.11.2
   hive: ^2.0.4
   hive_flutter: ^1.1.0
   path_provider: ^2.0.8
-  provider: ^5.0.0
+  provider: ^6.1.2
   #audioplayers: ^0.20.1
 
   # The following adds the Cupertino Icons font to your application.
@@ -49,14 +51,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  hive_generator: ^1.1.0
+  hive_generator: ^2.0.1
   build_runner: ^2.0.5
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
