--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,8 +51,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_test: ^1.0.0
   hive_generator: ^2.0.1
   build_runner: ^2.0.5
+  mockito: ^5.0.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
